fix: avoid immediate flicker on stale

--- a/src/style.scss
+++ b/src/style.scss
@@ -152,6 +152,8 @@ footer {
 	margin-top: 1rem;
 	border-bottom: solid 1px var(--dark-glass);
 
+	transition: opacity 50ms ease-in-out;
+
 	&.stale {
 		opacity: 0.7;
 	}
